<resources>
    <string name="app_name">坤鑫货代</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">设置</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_voyage_list">船期列表</string>
    <string name="search_price_list">运价列表</string>
    <string name="ship_company">船公司</string>
    <string name="login">登录</string>
    <string name="price_detail">运价详情</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="port_detail">船期详情</string>
    <string name="order">下单</string>
    <string name="title_activity_enquiry">询价</string>
    <string name="title_activity_lock">手势解锁</string>
    <string name="title_activity_lock_setup">手势锁设置</string>
    <string name="title_activity_setting">设置</string>

    <string name="dest_port_tip">VALPARAISO（瓦尔帕莱索)</string>
    <string name="whl">WHL/万海航运</string>
    <string name="start_port_tip">Shekou/sk/蛇口</string>

    <string name="cancel">取消</string>
    <string name="try_again">重试</string>
    <string name="goon">继续</string>
    <string name="confirm">确认</string>

    <string name="lock_pattern_recording_incorrect_too_short" >"至少连接4个点，请重试"</string>
    <string name="password_not_match">两次输入密码不一致,请重新输入</string>
    <string name="lock_pattern_error_2" >"手势密码不对,还有１次机会"</string>
    <string name="lock_pattern_error_1" >"手势密码不对,还有2次机会"</string>
    <string name="lock_pattern_error_0" >"错误次数过多,请稍后重试"</string>
    <string name="input_new_password" >"请输入新密码"</string>

    <string name="lock_screen_access_pattern_start">Pattern started</string>
    <string name="lock_screen_access_pattern_cleared">Pattern cleared</string>
    <string name="lock_screen_access_pattern_cell_added">Cell added</string>
    <string name="lock_screen_access_pattern_detected">Pattern completed</string>
    <string name="scale_design">请绘制图案</string>
    <string name="scale_design_again">请再次绘制图案</string>
    <string name="scale_design_old">请输入旧图案图案</string>
    <string name="scale_design_old_match">与旧密码不匹配</string>

    <string name="additional_details">附加费详情</string>
    <string name="cost_of_name">费用名称</string>
    <string name="currency">币种</string>
    <string name="day">天</string>
    <string name="download_progress">下载进度</string>
    <string name="enter_the_password_for_gestures">请输入手势密码</string>
    <string name="gp20">20’GP</string>
    <string name="gp40">40‘GP</string>
    <string name="identified">已确定</string>
    <string name="define">确定</string>
    <string name="evaluation">已评价</string>
    <string name="hor45">45’HOR</string>
    <string name="hot_port">热门港口</string>
    <string name="hq40">40‘HQ</string>
    <string name="my_setup">我的设置</string>
    <string name="id">id</string>
    <string name="my_inquiry">我的询价</string>
    <string name="my_order">我的订单</string>
    <string name="dest">目</string>
    <string name="password_zh">密码</string>
    <string name="personal_information">个人信息</string>
    <string name="please_enter_the_port_information">请输入港口信息</string>
    <string name="data_updating">正在更新数据，请稍等</string>
    <string name="please_log_in">请登录</string>
    <string name="start_port">起运港</string>
    <string name="range">航程</string>
    <string name="recent_history">    近期历史    </string>
    <string name="back">返回</string>
    <string name="route">航线</string>
    <string name="scId">scId</string>
    <string name="set_the_gesture_lock">设置手势锁</string>
    <string name="since">起</string>
    <string name="submit_orders">提交订单</string>
    <string name="dest_port">目的港</string>
    <string name="query">查询</string>
    <string name="user_name_zh">用户名</string>
    <string name="ticket">票</string>
    <string name="to">至</string>
    <string name="total_usd">合计USD：</string>
    <string name="transit">中转：</string>
    <string name="tt">TT</string>
    <string name="unconfirmed">未确认</string>
    <string name="whether_to_save_the_password">是否保存密码</string>
    <string name="voyage">船期</string>
    <string name="mine">我的</string>
    <string name="full_container_load">整柜</string>
    <string name="bulk_cargo">散货</string>
    <string name="air_lift">空运</string>
    <string name="express">快递</string>
    <string name="replied">已回复</string>
    <string name="no_reply">未回复</string>
    <string name="create_enquiry">创建询价</string>
    <string name="submit">提交</string>
    <string name="mandatory">必填</string>
    <string name="required">必选</string>
    <string name="all">全部</string>
    <string name="enquiry_have_submit_to_business">询价已提交商务</string>
    <string name="title_activity_enquiry_detail">询价详情</string>
    <string name="optional">选填</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="log_out">退出登录</string>
    <string name="succeed">成功</string>
    <string name="title_activity_order">订单</string>
    <string name="network_error">网络连接失败，请检查你的网络</string>
    <string name="login_fail">登录失败</string>
    <string name="search_order_tip">请输入运单号/港口/船公司代码</string>
    <string name="un_do">未审核</string>
    <string name="refuse">未通过</string>
    <string name="pass">已通过</string>
    <string name="enquiry">询价</string>
    <string name="main_service">在线客服</string>
    <string name="main_service_detail">尽心为您服务</string>
    <string name="main_hope">敬请期待</string>
    <string name="main_hope_detail">更多精彩内容</string>
    <string name="used_2_day">已使用２天</string>
    <string name="my_customers_management">我的客户管理</string>
    <string name="management_num">已管理24位</string>
    <string name="service">客户服务</string>
    <string name="title_activity_order_detail">订单详情</string>
    <string name="title_activity_order_ticket">委托单</string>
    <string name="freight">运价</string>
    <string name="charge_details">费用明细</string>
    <string name="title_activity_freight">运价查询</string>
    <string name="title_activity_voyage">船期查询</string>
    <string name="freight_detail">运价详情</string>
    <string name="voyage_detail">船期详情</string>
    <string name="freight_list">运价列表</string>
    <string name="all_customers">所有客户管理</string>
    <string name="title_activity_book">订舱</string>
    <string name="cargo_information">货物信息</string>
    <string name="cargo_name">名称：</string>
    <string name="cargo_bulk">体积：</string>
    <string name="cargo_weight">重量：</string>
    <string name="save">保存</string>
    <string name="mark">备注</string>
    <string name="remark">备注：</string>
    <string name="delete">删除</string>
    <string name="search">搜索</string>
    <string name="title_activity_add_cus">添加客户</string>
    <string name="title_activity_cus_info">坤鑫国际</string>
    <string name="name">名称：</string>
    <string name="nation">国家：</string>
    <string name="customer_type">客户类型：</string>
    <string name="contact">联系人：</string>
    <string name="phone">电话：</string>
    <string name="address">地址：</string>
    <string name="title_shipper">托运人/发货人</string>
    <string name="title_consignee">收货人</string>
    <string name="title_notify">通知方</string>
    <string name="shipper">发货人</string>
    <string name="consignee">收货人</string>
    <string name="notify">（通知方）</string>
    <string name="modify">修改</string>
    <string name="validity">有效期：</string>
    <string name="title_activity_user_info">个人中心</string>
    <string name="logining">登录中...</string>
    <string name="not_login">未登录</string>
    <string name="title_activity_shipper">托运人/发货人</string>
    <string name="title_activity_consignees">收货人</string>
    <string name="title_activity_notifys">通知方</string>
    <string name="company_">公司：</string>
    <string name="fax_">传真：</string>
    <string name="add">添加</string>
    <string name="title_activity_consigness_info">详情</string>
    <string name="title_activity_notify_info">详情</string>
    <string name="no_name">未命名</string>
    <string name="title_activity_surcharges">费用清单</string>
    <string name="title_activity_order_search">搜索订单</string>
    <string name="payable">应付</string>
    <string name="accounts">应收</string>
    <string name="title_activity_cost_fast">费用清单</string>
    <string name="title_activity_book_fast">下单</string>
    <string name="title_activity_address">地址</string>
    <string name="title_activity_address_detail">地址详情</string>
    <string name="title_activity_address_search">搜索</string>
    <string name="title_activity_accounts">应收</string>
    <string name="title_activity_pay">应付</string>
    <string name="spin_prompt">USD</string>
    <string name="ship">船</string>
    <string name="cls_">截关日期：</string>
    <string name="pls_cls">请选择截关日期</string>
    <string name="etd_">开船日期：</string>
    <string name="pls_etd">请选择开船日期</string>
    <string name="barge_">驳船日期：</string>
    <string name="pls_barge">请选择驳船日期</string>
    <string name="box_">箱型：</string>
    <string name="pls_box">请选择箱型</string>
    <string name="pls_cargo_info">名称　体积　重量</string>
    <string name="cm3">/cm３</string>
    <string name="pls_edit">点击开始编辑</string>
    <string name="pls_customs">是否需要报关</string>
    <string name="pls_trailer">是否需要拖车</string>
    <string name="trailer_info">拖车服务预留信息</string>
    <string name="contact_tel">联系人电话</string>
    <string name="trailer_adr">拖运货物地址</string>
    <string name="release_type">放货类型</string>
    <string name="accounts_cost_detail">查看应收费用明细</string>
    <string name="pay_cost_detail">查看应付费用明细</string>
    <string name="ocean_">海运费：</string>
    <string name="usd">USD</string>
    <string name="pls_modify">点击填写</string>
    <string name="trailer_cost">拖车费：</string>
    <string name="customs_cost">报关费：</string>
    <string name="surcharges">附加费</string>
    <string name="other_">其它：</string>
    <string name="pay_method">是否到付：</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="total">合计</string>
    <string name="box_view">查看箱型</string>
    <string name="zip_">邮编：</string>
    <string name="title_activity_order_list">我的订单</string>
    <string name="title_activity_cus_add">新建客户</string>
    <string name="name_en_">英文名：</string>
    <string name="name_zh_">中文名：</string>
    <string name="tel_">电话：</string>
    <string name="mobile_">手机：</string>
    <string name="email_">邮箱：</string>
    <string name="address_en_">英文地址：</string>
    <string name="address_cn_">中文地址：</string>
    <string name="wechat_">微信：</string>
    <string name="delete_fail">删除失败</string>
    <string name="fail">失败</string>
    <string name="cost_list_tip">请选择箱型并添加数量</string>
    <string name="qq">QQ</string>
    <string name="weichat">微信</string>
</resources>
