<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@mipmap/pop_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/add_full_container_load"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_15"
        android:layout_marginLeft="@dimen/margin_15"
        android:layout_marginRight="@dimen/margin_15"
        android:layout_marginTop="@dimen/margin_20"
        android:gravity="center"
        android:textSize="@dimen/text_20"
        android:text="@string/full_container_load" />

    <TextView style="@style/line" />

    <TextView
        android:id="@+id/add_bulk_cargo"
        android:textSize="@dimen/text_20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_15"
        android:gravity="center"
        android:text="@string/bulk_cargo" />

    <TextView style="@style/line" />

    <TextView
        android:id="@+id/add_air_lift"
        android:textSize="@dimen/text_20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_15"
        android:gravity="center"
        android:text="@string/air_lift" />

    <TextView style="@style/line" />

    <TextView
        android:textSize="@dimen/text_20"
        android:id="@+id/add_express"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_15"
        android:gravity="center"
        android:text="@string/express" />

    <TextView style="@style/line" />
</LinearLayout>