<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.wl.activity.SelectCostActivity">
    <include layout="@layout/title_layout"/>

    <EditText
        android:id="@+id/cargo_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/padding_10"
        android:hint="@string/cargo_name"/>
    <EditText
        android:padding="@dimen/padding_10"
        android:id="@+id/cargo_bulk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:inputType="numberDecimal"
        android:hint="@string/cargo_bulk"/>
    <EditText
        android:padding="@dimen/padding_10"
        android:id="@+id/cargo_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:inputType="numberDecimal"
        android:hint="@string/cargo_weight"/>

</LinearLayout>
