<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/firstLetter"
        android:text="@string/usd"
        android:paddingLeft="@dimen/padding_10"
        android:background="@color/gray_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:paddingLeft="@dimen/padding_10"
        android:layout_alignBottom="@+id/delete"
        android:layout_alignTop="@+id/delete"
        android:id="@+id/adapter_item"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_50"
        android:orientation="vertical"
        android:paddingBottom="@dimen/padding_5"
        android:paddingTop="@dimen/padding_5"
        android:layout_alignLeft="@id/firstLetter"
        android:layout_below="@id/firstLetter"
        android:text="@string/contact" />

    <Button
        android:text="@string/delete"
        android:layout_below="@+id/firstLetter"
        android:visibility="gone"
        android:id="@+id/delete"
        android:layout_width="@dimen/width_50"
        android:layout_height="@dimen/height_50"
        android:layout_alignParentRight="true"
        android:layout_gravity="right"
        android:background="@color/red"
        android:textColor="@color/white" />
</RelativeLayout>