<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F2F2F2"
    android:orientation="vertical">

    <include layout="@layout/title_layout" />

    <ScrollView
        android:scrollbars="none"
        android:id="@+id/order_scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10"
                android:background="@drawable/input_layout_frame"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/order_id"
                    style="@style/order_detail_text"
                    android:layout_marginBottom="@dimen/margin_1"
                    android:text="KX201511101729" />

                <TextView
                    android:id="@+id/order_start"
                    style="@style/order_detail_text"
                    android:drawableLeft="@mipmap/start"
                    android:drawablePadding="@dimen/padding_5"
                    android:text="YANTIAN(盐田)" />

                <TextView
                    android:id="@+id/order_dest"
                    style="@style/order_detail_text"
                    android:drawableLeft="@mipmap/dest"
                    android:drawablePadding="@dimen/padding_5"
                    android:text="NEW YORK,NY(纽约，纽约州)" />

                <TextView
                    android:id="@+id/order_sc"
                    style="@style/order_detail_text"
                    android:text="船公司：ANL" />

                <TextView
                    android:id="@+id/order_cls"
                    style="@style/order_detail_text"
                    android:text="@string/cls_" />

                <TextView
                    android:id="@+id/order_etd"
                    style="@style/order_detail_text"
                    android:text="@string/etd_" />

                <TextView
                    android:id="@+id/order_barge"
                    style="@style/order_detail_text"
                    android:text="@string/barge_" />

                <TextView
                    android:id="@+id/order_cargo_info"
                    style="@style/order_detail_text"
                    android:text="@string/cargo_information" />

                <TextView
                    android:id="@+id/order_customs"
                    style="@style/order_detail_text"
                    android:text="@string/pls_customs" />

                <TextView
                    android:id="@+id/order_trailer"
                    style="@style/order_detail_text"
                    android:text="@string/pls_trailer" />

                <TextView
                    android:id="@+id/order_remark"
                    style="@style/order_detail_text"
                    android:text="@string/remark" />
            </LinearLayout>

            <TextView
                style="@style/order_detail_text"
                android:layout_marginLeft="@dimen/margin_5"
                android:background="#F2F2F2"
                android:text="@string/accounts" />

            <HorizontalScrollView
                android:scrollbars="none"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_10"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_marginRight="@dimen/margin_10"
                android:background="@color/gray_light"
                android:padding="@dimen/padding_1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.wl.view.ChildListView
                        android:id="@+id/order_receive_name"
                        android:layout_width="@dimen/width_100"
                        android:layout_height="wrap_content"
                        android:divider="@null"
                        android:dividerHeight="0dp" />

                    <com.wl.view.MyGridView
                        android:id="@+id/order_receive_box"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:divider="@null"
                        android:dividerHeight="0dp" />
                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                style="@style/order_detail_text"
                android:layout_marginLeft="@dimen/margin_5"
                android:background="#F2F2F2"
                android:text="@string/payable" />

            <HorizontalScrollView
                android:scrollbars="none"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_10"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_marginRight="@dimen/margin_10"
                android:background="@color/gray_light"
                android:padding="@dimen/padding_1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.wl.view.ChildListView
                        android:id="@+id/order_pay_name"
                        android:layout_width="@dimen/width_100"
                        android:layout_height="wrap_content"
                        android:divider="@null"
                        android:dividerHeight="0dp" />

                    <com.wl.view.MyGridView
                        android:id="@+id/order_pay_box"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:divider="@null"
                        android:dividerHeight="0dp" />
                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
