<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.wl.activity.AddCusActivity">

    <include layout="@layout/title_layout" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/padding_20">

        <TextView
            android:id="@+id/name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/info"
            android:paddingTop="@dimen/padding_11"
            android:text="@string/name"
            android:textColor="@color/gray" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/name_label"
            android:layout_toRightOf="@+id/name_label"
            android:background="@null"
            android:textSize="@dimen/text_15" />

        <TextView
            android:id="@+id/nation_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name_label"
            android:paddingTop="@dimen/padding_10"
            android:text="@string/nation"
            android:textColor="@color/gray" />

        <EditText
            android:id="@+id/nation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/nation_label"
            android:layout_toRightOf="@+id/nation_label"
            android:background="@null"
            android:textSize="@dimen/text_15" />

        <TextView
            android:id="@+id/custom_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nation_label"
            android:paddingTop="@dimen/padding_10"
            android:text="@string/customer_type"
            android:textColor="@color/gray" />

        <EditText
            android:id="@+id/custom_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/custom_label"
            android:layout_toRightOf="@+id/custom_label"
            android:background="@null"
            android:textSize="@dimen/text_15" />

        <TextView
            android:id="@+id/contact_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/custom_label"
            android:paddingTop="@dimen/padding_10"
            android:text="@string/contact"
            android:textColor="@color/gray" />

        <EditText
            android:id="@+id/contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/contact_label"
            android:layout_toRightOf="@+id/contact_label"
            android:background="@null"
            android:textSize="@dimen/text_15" />


        <TextView
            android:id="@+id/phone_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contact_label"
            android:paddingTop="@dimen/padding_10"
            android:text="@string/phone"
            android:textColor="@color/gray" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/phone_label"
            android:layout_toRightOf="@+id/phone_label"
            android:background="@null"
            android:inputType="number"
            android:textSize="@dimen/text_15" />

        <TextView
            android:id="@+id/address_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone_label"
            android:paddingTop="@dimen/padding_10"
            android:text="@string/address"
            android:textColor="@color/gray" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/address"
            android:background="@null"
            android:layout_toRightOf="@+id/address_label"
            android:layout_alignBottom="@+id/address_label"/>

        <TextView
            android:id="@+id/mark_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/address_label"
            android:paddingTop="@dimen/padding_10"
            android:text="@string/remark"
            android:textColor="@color/gray" />

        <EditText
            android:id="@+id/mark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/mark_label"
            android:layout_toRightOf="@+id/mark_label"
            android:background="@null"
            android:textSize="@dimen/text_15" />
    </RelativeLayout>

</LinearLayout>
